--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,6 +45,10 @@ header {
   padding-left: 2rem;
 }
 
+.mobilenav {
+  display: none;
+}
+
 h1 {
   color: #fff;
 }
@@ -56,6 +60,7 @@ h1, h3, h4, p {
 .banner {
   background: url("../../resources/images/glasses-banner.png");
   background-size: cover;
+  background-position: top;
   width: 100%;
   height: 30rem;
 }
@@ -153,4 +158,113 @@ footer {
 footer img {
   height: 1.5rem;
   margin-right: 1rem;
+}
+
+@media only screen and (max-width: 1064px) {
+  .header_wrapper_outer {
+    padding-top: 0;
+  }
+
+  .banner {
+    height: 22rem;
+  }
+
+  .banner_textbox {
+    font-size: 1.33rem;
+    padding: 0.75rem 4rem;
+    position: relative;
+    top: 5rem;
+    left: -2rem;
+  }
+}
+
+@media only screen and (max-width: 775px) {
+  .banner {
+    height: 17rem;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .header_left h1 {
+    display: none;
+  }
+
+  .notmobilenav {
+    display: none;
+  }
+
+  .mobilenav {
+    display: flex;
+  }
+
+  .banner {
+    background-position: 20%;
+  }
+
+  .infobox, .infobox h4, .banner_textbox {
+    width: 100%;
+  }
+
+  .banner_textbox {
+    float: none;
+    font-size: 1rem;
+    padding: 1rem;
+    position: relative;
+    top: 9rem;
+    right: 50%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .banner_textbox h2 {
+    text-align: center;
+  }
+
+  .icons {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    align-items: center;
+    margin: 3.77rem auto;
+  }
+
+  .pic img {
+    margin-bottom: 1rem;
+  }
+
+  .caption h3 {
+    font-size: 0.77rem;
+  }
+
+  .bottomcaption {
+    margin-bottom: 1.54rem;
+  }
+
+  .info_wrapper_inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5rem;
+  }
+
+  .infobox h4 {
+    text-align: center;
+  }
+
+  .infobox p {
+    font-size: 0.77rem;
+    margin: 0 auto 4rem;
+  }
+
+  .info_wrapper_inner {
+    margin-bottom: 0;
+  }
+
+  footer {
+    justify-content: center;
+  }
+
+  footer h3 {
+    display: none;
+  }
 }
